--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+  <nav>
+    <ul>
+      <li><a href=css.html target="_blank">S - Intro</a></li>
+    </ul>
+  </nav>
   <main>
     <article>
       <header>
