--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <body>
   <nav>
     <ul>
-      <li><a href=css.html target="_blank">S - Intro</a></li>
+      <li class="navbar-buttons"><a href=css.html target="_blank">CSS - Intro</a></li>
+      <li class="navbar-buttons"><a href=css-display.html target="_blank">CSS Display</a></li>
+      <li class="navbar-buttons"><a href=flexbox.html target="_blank">Flexbox</a></li>
     </ul>
   </nav>
+  <h1>In programming take a big problem and divide them into smaller problems and then solve those step-by-step.</h1>
   <main>
     <article>
       <header>
