js, intro, template literals, equality operator, objects

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li class="navbar-buttons"><a href=css.html target="_blank">CSS - Intro</a></li>
       <li class="navbar-buttons"><a href=css-display.html target="_blank">CSS Display</a></li>
       <li class="navbar-buttons"><a href=flexbox.html target="_blank">Flexbox</a></li>
+      <li class="navbar-buttons"><a href=js.html target="_blank">JavaScript</a></li>
     </ul>
   </nav>
   <h1>In programming take a big problem and divide them into smaller problems and then solve those step-by-step.</h1>
